resolvendo layout shifting

--- a/styles/fields/inputs.css
+++ b/styles/fields/inputs.css
@@ -3,7 +3,8 @@ input, textarea, select {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
 
   padding: .75rem 1rem;
   font: var(--text);
@@ -22,8 +23,9 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-witihin {
   outline: .25rem solid var(--surface-secondary);
-  border: .125rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: .1px;
+
 }
 
 input[type="date"] {
